--- a/src/styles/Room.module.css
+++ b/src/styles/Room.module.css
@@ -174,6 +174,52 @@
   height: 100%;
 }
 
+.stream__box{
+  background-color: #3f434a;
+  height: 60vh;
+  display: none;
+}
+
+.streams__container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  margin-top: 25px;
+  margin-bottom: 225px;
+}
+
+.video__container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #b366f9;
+  border-radius: 50%;
+  cursor: pointer;
+  overflow: hidden;
+  height: 300px;
+  width: 300px;
+}
+
+.video__player {
+  height: 100%;
+  width: 100%;
+}
+
+.video {
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width: 1400px) {
+  .video__container{
+    height: 200px;
+    width: 200px;
+  }
+}
+
 
 @media (max-width: 1200px) {
   .members__container {
@@ -207,6 +253,11 @@
 @media (max-width: 768px) {
   .stream__container {
     width: 100%;
+  }
+
+  .video__container{
+    height: 100px;
+    width: 100px;
   }
 
   .messages__container {
