feat: Implementando compartilhamento de tela.
Realizado: Implementando compartilhamento de tela.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -185,3 +185,11 @@ a {
     background-color: transparent;
   }
 }
+
+
+a.active,
+button.active,
+a:hover,
+button:hover {
+  background-color: #845695 !important;
+}
