--- a/src/styles/Room.module.css
+++ b/src/styles/Room.module.css
@@ -68,7 +68,7 @@
   background-color: #2aca3e;
 }
 
-.member_name{
+.member_name {
   font-size: 14px;
   line-height: 0;
 }
@@ -113,23 +113,20 @@
   color: #ede0e0;
 }
 
-.message__body__bot{
+.message__body__bot {
   padding: 0 20px;
   max-width: 900px;
   color: #bdbdbd;
 }
 
-
 .message__author {
   margin-right: 10px;
-  color: #2aca3e!important;
-
+  color: #2aca3e !important;
 }
 
 .message__author__bot {
   margin-right: 10px;
-  color: #a52aca!important;
-
+  color: #a52aca !important;
 }
 
 .message__text {
@@ -174,13 +171,23 @@
   height: 100%;
 }
 
-.stream__box{
+.stream__box {
   background-color: #3f434a;
   height: 60vh;
+  overflow: hidden;
+}
+
+.stream__box_none{
   display: none;
 }
 
-.streams__container{
+.stream__box video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.streams__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -190,7 +197,7 @@
   margin-bottom: 225px;
 }
 
-.video__container{
+.video__container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -214,12 +221,11 @@
 }
 
 @media (max-width: 1400px) {
-  .video__container{
+  .video__container {
     height: 200px;
     width: 200px;
   }
 }
-
 
 @media (max-width: 1200px) {
   .members__container {
@@ -241,6 +247,7 @@
     width: calc(100% - 20rem);
     left: 0;
   }
+
   .messages__container {
     max-width: 20rem;
   }
@@ -255,7 +262,7 @@
     width: 100%;
   }
 
-  .video__container{
+  .video__container {
     height: 100px;
     width: 100px;
   }
@@ -267,10 +274,6 @@
   .chat__button {
     display: block;
   }
-}
-
-.stream__box {
-  position: relative;
 }
 
 .stream__focus {
@@ -314,11 +317,4 @@
   width: 1.5rem;
   height: 1.5rem;
   fill: #ede0e0;
-}
-
-.stream__actions a.active,
-.stream__actions button.active,
-.stream__actions a:hover,
-.stream__actions button:hover {
-  background-color: #845695;
 }
